fix remove icon, tooltips, form distortions width, wild navigation, update snack time

--- a/src/app/components/distortion-thumb/distortion-thumb.component.scss
+++ b/src/app/components/distortion-thumb/distortion-thumb.component.scss
@@ -25,6 +25,10 @@
     &.extended {
       row-gap: 0.5rem;
     }
+
+    &:not(.extended) mat-card-content {
+      display: flex;
+    }
   }
 
   footer {
